--- a/.github/workflows/pragma-linux-ci.yml
+++ b/.github/workflows/pragma-linux-ci.yml
@@ -1,9 +1,9 @@
 name: Build Windows
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 concurrency:
   group: environment-win-${{ github.ref }}
